@@ -6,7 +6,7 @@ import fr.raksrinana.rsndiscord.settings.types.MessageConfiguration;
 import fr.raksrinana.rsndiscord.utils.jda.JDAWrappers;
 import lombok.Getter;
 import lombok.extern.log4j.Log4j2;
-import net.dv8tion.jda.api.events.message.guild.GuildMessageReceivedEvent;
+import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
 import org.jetbrains.annotations.NotNull;
 import java.util.Arrays;
@@ -20,13 +20,16 @@ import static net.dv8tion.jda.api.entities.MessageType.INLINE_REPLY;
 @Log4j2
 public class TimeReactionsReplyEventListener extends ListenerAdapter{
 	@Override
-	public void onGuildMessageReceived(@NotNull GuildMessageReceivedEvent event){
-		super.onGuildMessageReceived(event);
+	public void onMessageReceived(@NotNull MessageReceivedEvent event){
+		super.onMessageReceived(event);
+		if(!event.isFromGuild()){
+			return;
+		}
 		
 		var guild = event.getGuild();
 		var author = event.getAuthor();
 		
-		try(var context = LogContext.with(guild).with(author)){
+		try(var ignored = LogContext.with(guild).with(author)){
 			var message = event.getMessage();
 			
 			if(message.getType() != INLINE_REPLY || author.isBot()){
@@ -43,14 +46,14 @@ public class TimeReactionsReplyEventListener extends ListenerAdapter{
 					var original = Arrays.stream(reference.getContentRaw().split("\n"))
 							.filter(line -> Character.isDigit(line.charAt(0)) || line.startsWith("N/A"))
 							.map(line -> line.split(" ", 2)[0])
-							.collect(Collectors.toList());
-					var received = Arrays.stream(message.getContentRaw().split("\n")).collect(Collectors.toList());
+							.toList();
+					var received = Arrays.stream(message.getContentRaw().split("\n")).toList();
 					
 					if(original.size() == received.size()){
 						var content = author.getAsMention() + " replied:\n\n" +
-								IntStream.range(0, original.size())
-										.mapToObj(index -> original.get(index) + " " + received.get(index))
-										.collect(Collectors.joining("\n"));
+						              IntStream.range(0, original.size())
+								              .mapToObj(index -> original.get(index) + " " + received.get(index))
+								              .collect(Collectors.joining("\n"));
 						
 						JDAWrappers.reply(reference, content).submit()
 								.thenAccept(sent -> JDAWrappers.delete(message).submit());
